Cardfiles jumping image when loading fix

--- a/UJCSystem/ITJakub.Web.Hub/Areas/CardFiles/Content/itjakub.cardfile.less
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/CardFiles/Content/itjakub.cardfile.less
@@ -93,6 +93,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     display: inline-block;
+    height: 30px;
 }
 
 .cardfile-image-thumbnail {
